--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,75 +1,89 @@
 {
-	"cucumberautocomplete.strictGherkinCompletion": true,
-	"cucumberautocomplete.strictGherkinValidation": false,
-	"cucumberautocomplete.customParameters": [
-		{
-			"parameter": "{ab}",
-			"value": "(a|b)"
-		}
-	],
-	"cucumberautocomplete.skipDocStringsFormat": true,
-	"cucumberautocomplete.formatConfOverride": {
-		"But": "relative"
-	},
-	"cucumberautocomplete.onTypeFormat": true,
-	"editor.quickSuggestions": {
-		"comments": false,
-		"strings": true,
-		"other": true
-	},
-	"cucumberautocomplete.gherkinDefinitionPart": "(Given|When|Then)\\(",
-	"cucumberautocomplete.stepRegExSymbol": "'",
-	"workbench.colorTheme": "Winter is Coming (Dark Blue)",
-	"cSpell.language": "en,es",
-	"terminal.integrated.defaultProfile.windows": "Git Bash",
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"[html]": {
-		"editor.defaultFormatter": "vscode.html-language-features"
+	"[Typescript]": {
+		"editor.defaultFormatter": "rvest.vs-code-prettier-eslint"
 	},
 	"[javascript]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "rvest.vs-code-prettier-eslint"
 	},
-	"[Typescript]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	"files.associations": {
+		"*.yml": "yaml"
 	},
-	"[feature]": {
-		"editor.defaultFormatter": "alexkrechik.cucumberautocomplete"
+	"[yaml]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+		"editor.autoIndent": "keep",
+		"diffEditor.ignoreTrimWhitespace": false,
+		"editor.defaultFormatter": "kennylong.kubernetes-yaml-formatter",
+		"editor.formatOnSave": true
 	},
-	"eslint.validate": ["typescript","javascript","ts", "js"],
-	"eslint.format.enable": true,
+	"cypressHelper.menuItems": {
+		"FindCustomCommandReferences": true,
+		"FindStepDefinitionReferences": true,
+		"GenerateCustomCommandTypes": true,
+		"GoToCustomCommand": false,
+		"OpenCypress": false,
+		"ParseHAR": false,
+		"RunCypress": false,
+		"SchemaGenerator": false,
+		"mockAutocomplete": false
+	},
+	"editor.autoIndent": "advanced",
+	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
+	"editor.cursorBlinking": "expand",
+	"editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
+	"editor.formatOnPaste": false,
+	"editor.formatOnSave": true,
+	"editor.formatOnSaveMode": "file",
+	"editor.formatOnType": true,
+	"editor.lineHeight": 20,
+	"editor.quickSuggestions": {
+		"comments": true,
+		"other": true,
+		"strings": true
+	},
+	"editor.tabCompletion": "on",
 	"eslint.codeAction.showDocumentation": {
 		"enable": true
 	},
-	"editor.formatOnType": true,
-	"editor.formatOnPaste": true,
-	"editor.formatOnSave": true,
-	"editor.wordWrap": "on",
-	"editor.accessibilitySupport": "off",
-	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
-	"python.formatting.provider": "autopep8",
-	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
-	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
-	"html.format.wrapLineLength": 150,
-	"workbench.settings.editor": "json",
+	"eslint.format.enable": true,
+	"eslint.validate": ["typescript", "javascript", "ts", "js"],
+	"explorer.fileNesting.enabled": true,
+	"files.autoSave": "onFocusChange",
 	"git.enableSmartCommit": true,
-	"editor.tabCompletion": "on",
-	"editor.lineHeight": 20,
-	"editor.cursorBlinking": "expand",
-	"cSpell.enableFiletypes": ["cucumber"],
-	"workbench.iconTheme": "vscode-icons",
-	"cypressHelper.menuItems": {
-		"OpenCypress": false,
-		"RunCypress": false,
-		"GenerateCustomCommandTypes": true,
-		"GoToCustomCommand": false,
-		"FindCustomCommandReferences": true,
-		"FindStepDefinitionReferences": true,
-		"SchemaGenerator": false,
-		"ParseHAR": false,
-		"mockAutocomplete": false
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+	"javascript.updateImportsOnFileMove.enabled": "always",
+	"material-icon-theme.folders.color": "#7cb342",
+	"material-icon-theme.files.associations": {
+		"tsconfig.json": "svgo",
+		"regression.yml": "test-ts",
+		"sanity-template.yml": "test-ts",
+		"cypress.reporter.chrome.json": "auto",
+		"cypress.reporter.firefox.json": "auto",
+		"cypress.reporter.edge.json": "auto",
+		"commands.js": "cypress",
+		"e2e.js": "cypress",
+		"*.test.js": "test-tsx",
+		"*.Page.js": "3d"
 	},
-	"cSpell.autoFormatConfigFile": true,
-	"githubPullRequests.ignoredPullRequestBranches": [
-		"QA"
-	]
+	"material-icon-theme.folders.associations": {
+		"workflows": "github",
+		"support": "tools"
+	},
+	"testing.alwaysRevealTestOnStateChange": true,
+	"testing.automaticallyOpenPeekViewDuringAutoRun": true,
+	"terminal.integrated.cursorBlinking": true,
+	"terminal.integrated.cursorStyle": "line",
+	"terminal.integrated.defaultProfile.windows": "Git Bash",
+	"terminal.integrated.tabs.defaultColor": "terminal.ansiGreen",
+	"terminal.integrated.tabs.defaultIcon": "source-control",
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+	"typescript.updateImportsOnFileMove.enabled": "always",
+	"vs-code-prettier-eslint.prettierLast": true,
+	"workbench.colorTheme": "Winter is Coming (Dark Blue)",
+	"workbench.iconTheme": "material-icon-theme",
+	"workbench.settings.editor": "json",
+	"workbench.tree.enableStickyScroll": true,
+	"[github-actions-workflow]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
