--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "pw:install": "npx playwright install --with-deps",
     "test:plan": "npx playwright test --project=chromium --list",
-    "test": "npx playwright test --project=chromium --headed",
+    "test": "npx playwright test --project=chromium",
     "debug": "npx playwright test --project=chromium --debug",
     "regression": "npx playwright test",
     "test:chrome": "npx playwright test --project=chromium --headed",
