--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,5 +85,8 @@
 	"workbench.tree.enableStickyScroll": true,
 	"[github-actions-workflow]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	}
+	},
+	"cSpell.words": [
+		"domcontentloaded"
+	]
 }
