--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -42,18 +42,19 @@ jobs:
         yarn regression:${{ matrix.browser }}
 
     - name: 📊Generate Allure Report for ${{ matrix.browser }}
+      if: always()
       run: |
-        yarn allure:open
+        yarn allure:gen:${{ matrix.browser }}
 
     - name: 📡Upload Artifact - Allure Report for ${{ matrix.browser }}
       uses: actions/upload-artifact@v3
       if: always()
       with:
         name: allure-${{ matrix.browser }}-report
-        path: allure-report
+        path: allure-report/${{ matrix.browser }}
         retention-days: 15
 
-    - name: 📡Upload Artifact - HTML Report for ${{ matrix.browser }}
+    - name: 📡Upload Artifact - Test Reports for ${{ matrix.browser }}
       uses: actions/upload-artifact@v3
       if: always()
       with:
@@ -62,6 +63,7 @@ jobs:
         retention-days: 15
 
     - name: 📦️ Set testExecKey for Jira XRay
+      if: always()
       run: |
         if [[ "${{ matrix.browser }}" == "chrome" ]]; then
           echo "TXID=GX3-1533" >> $GITHUB_ENV
