test(GX3-1355): finish test // buttons  On branch GX3-1355-⚡️-tools-qa-elements-buttons Your branch is up to date with 'origin/GX3-1355-⚡️-tools-qa-elements-buttons'.
Changes to be committed:
modified:   .github/workflows/sanityFrancisco.yml

--- a/.github/workflows/sanityFrancisco.yml
+++ b/.github/workflows/sanityFrancisco.yml
@@ -2,7 +2,7 @@ name: 🧪Playwright Ely's Sanity Testing
 run-name: ${{github.actor}}👨🏻‍🔬 ran TestSuite in ${{github.ref_name}}
 on:
     push:
-        branches: ['test/GX3-1337/fillform-submit'] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
+        branches: ['GX3-1355-⚡️-tools-qa-elements-buttons'] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
 
 jobs:
     TestSuite:
