GX3-1355 // test // modificacion nombre archivo sanity On branch GX3-1355-⚡️-tools-qa-elements-buttons Your branch is up to date with 'origin/GX3-1355-⚡️-tools-qa-elements-buttons'. Changes to be committed: modified:   .github/workflows/sanityFrancisco.yml

--- a/.github/workflows/sanityFrancisco.yml
+++ b/.github/workflows/sanityFrancisco.yml
@@ -1,4 +1,4 @@
-name: 🧪Playwright Ely's Sanity Testing
+name: 🧪Playwright Francisco_Layseca Sanity Testing
 run-name: ${{github.actor}}👨🏻‍🔬 ran TestSuite in ${{github.ref_name}}
 on:
     push:
