--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 
     "clean:reports": "rm -rf test-results && rm -rf test-junit-report && rm -rf test-html-report && rm -rf allure-results",
 
+    "allure:open": "allure generate --clean",
     "allure:gen:chrome": "allure generate --clean -o allure-report/chrome",
     "allure:gen:firefox": "allure generate --clean -o allure-report/firefox",
     "allure:gen:edge": "allure generate --clean -o allure-report/edge",
