--- a/.github/workflows/sanity-template.yml
+++ b/.github/workflows/sanity-template.yml
@@ -53,7 +53,7 @@ jobs:
       if: always()
       with:
         name: test-report
-        path: allure-report/main
+        path: allure-report
         retention-days: 15
 
     - name: ✅Import Test Results to Xray
