--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -88,13 +88,17 @@ jobs:
         testExecKey: ${{ env.TXID }} #* Este debería ser el TX predeterminado para este Pipeline de Regresión.
         projectKey: 'GX3'
 
+  AriSlackNotification:
+    needs: [RegressionTesting]
+    runs-on: ubuntu-latest
+    steps:
     - name: 🔔Slack Notification of Done
       if: always()
       uses: rtCamp/action-slack-notify@v2.2.0
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_USERNAME: Ari✨
-        SLACK_MESSAGE: ':test_tube: BLACKHOLE Playwright Project -- REGRESSION TEST EXECUTION is Done and updated in Jira :rocket:'
+        SLACK_MESSAGE: ':test_tube: PLAYWRIGHT-BLACKHOLE: REGRESSION REPORT IMPORTED TO JIRA :rocket:'
         SLACK_COLOR: ${{ job.status }}
         SLACK_ICON: https://image.cdn2.seaart.ai/2023-12-06/clo9g0h4msbc73ac2sog/99e1abc36f32945cd4bacf5ee7448e96194545f7_high.webp
 
