--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ example_password=coderplaywright2023
 example_request=/backend/requests/challenges/get_completed.php
 example_endpoint_login=/sl
 example_endpoint_challenges=/challenges
+EXAMPLE_SPACE_LOGIN_USERNAME=Upercito
+EXAMPLE_SPACE_LOGIN_PASSWORD=upexgalaxy24
