creat api testing with typescript Changes to be committed: 	modified:   modules.d.ts 	new file:   tests/apis/elyTrelloBoards.ts 	new file:   tests/interfaces/elyTrelloApi.ts 	modified:   tests/interfaces/spaceBeyongTypes.ts 	modified:   tests/pages/TestBase.ts 	new file:   tests/specs/trello/cards.test.ts 	modified:   tsconfig.json
Changes not staged for commit:
	modified:   .github/workflows/sanityEly.yml

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 			"@helper/*": ["./tests/helper/*"],
 			"@data/*": ["./tests/data/*"],
 			"@type/*": ["./tests/interfaces/*"],
+			"@api/*": ["./tests/apis/*"],
 			"@TestBase": ["./tests/pages/TestBase.ts"]
 		}
 	},
