--- a/.github/workflows/sanityEly.yml
+++ b/.github/workflows/sanityEly.yml
@@ -8,6 +8,7 @@ jobs:
   TestSuite:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
     - name: 📘 Checkout Repo
       uses: actions/checkout@v3
@@ -33,6 +34,11 @@ jobs:
     - name: ✅ 🧪Test Suite Execution
       run: | #todo: EDITAR AQUÍ EL ARCHIVO SUITE A EJECUTAR:
         yarn test tests/specs/trello/cards.test.ts
+      env:
+        TRELLO_ENV_CI_BASEURL: ${{secrets.TRELLO_ENV_CI_BASEURL}}
+        TRELLO_API_CI_KEY: ${{secrets.TRELLO_API_CI_KEY}}
+        TRELLO_API_CI_TOKEN: ${{secrets.TRELLO_API_CI_TOKEN}}
+
 
     - name: 📊Generate Allure Report
       run: |
