--- a/.prettierrc
+++ b/.prettierrc
@@ -4,10 +4,10 @@
 	"useTabs": true,
 	"tabWidth": 4,
 	"bracketSpacing": true,
-	"arrowParents": "avoid",
+	"arrowParens": "avoid",
 	"trailingComma": "es5",
 	"bracketSameLine": true,
 	"proseWrap": "always",
 	"printWidth": 150,
-	"embeddedLanguageFormatting": "auto"
+	"parser": "typescript"
 }
