--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,11 +31,19 @@
 	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
 	"editor.cursorBlinking": "expand",
 	"editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
-	"editor.formatOnPaste": false,
-	"editor.formatOnSave": true,
-	"editor.formatOnSaveMode": "file",
-	"editor.formatOnType": true,
+	"editor.formatOnPaste": false, // required 
+	"editor.formatOnType": false, // required
+	"editor.formatOnSave": true, // optional 
+	"editor.formatOnSaveMode": "file", // required to format on save
+	"vs-code-prettier-eslint.prettierLast": false, // set as "true" to run 'prettier' last not first
 	"editor.lineHeight": 20,
+	"editor.defaultColorDecorators": true,
+	"editor.insertSpaces": false,
+	"editor.tabSize": 4,
+	"editor.detectIndentation": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll": "explicit"
+	},
 	"editor.quickSuggestions": {
 		"comments": true,
 		"other": true,
@@ -83,15 +91,11 @@
 	"terminal.integrated.tabs.defaultIcon": "source-control",
 	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
 	"typescript.updateImportsOnFileMove.enabled": "always",
-	"vs-code-prettier-eslint.prettierLast": true,
 	"workbench.colorTheme": "Winter is Coming (Dark Blue)",
 	"workbench.iconTheme": "material-icon-theme",
 	"workbench.settings.editor": "json",
 	"workbench.tree.enableStickyScroll": true,
 	"[github-actions-workflow]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"cSpell.words": [
-		"domcontentloaded"
-	]
+	}
 }
