--- a/package.json
+++ b/package.json
@@ -6,37 +6,30 @@
   "scripts": {
     "pw:install": "npx playwright install --with-deps",
     "test:plan": "npx playwright test --reporter=list --project=chromium --list",
-
     "test:ui": "npx playwright test --ui",
     "test:trace": "npx playwright show-trace",
     "test:debug": "npx playwright test --project=chromium --debug",
-
     "test": "npx playwright test --project=chromium",
     "test:firefox": "npx playwright test --project=firefox",
     "test:edge": "npx playwright test --project=edge",
     "test:iphone": "npx playwright test --project=iphone",
     "test:ci": "npx playwright test",
-
     "regression:chrome": "npx playwright test -c playwright.chrome.config.ts --project=chromium",
     "regression:firefox": "npx playwright test -c playwright.firefox.config.ts --project=firefox",
     "regression:edge": "npx playwright test -c playwright.edge.config.ts --project=edge",
     "regression:iphone": "npx playwright test -c playwright.iphone.config.ts --project=iphone",
     "regression:ci": "npx playwright test --workers=4",
-
     "show:report:chrome": "npx playwright show-report test-html-report/chrome",
     "show:report:firefox": "npx playwright show-report test-html-report/firefox",
     "show:report:edge": "npx playwright show-report test-html-report/edge",
     "show:report:iphone": "npx playwright show-report test-html-report/iphone",
-
     "clean:reports": "rm -rf test-results && rm -rf test-junit-report && rm -rf test-html-report && rm -rf allure-results",
-
     "allure:open": "allure generate --clean",
     "allure:gen:chrome": "allure generate --clean -o allure-report/chrome",
     "allure:gen:firefox": "allure generate --clean -o allure-report/firefox",
     "allure:gen:edge": "allure generate --clean -o allure-report/edge",
     "allure:gen:iphone": "allure generate --clean -o allure-report/iphone",
     "allure:report": "npm run allure:open && allure open --host localhost --port 7070",
-
     "prettier:write": "npx prettier --write tests/**/*.ts",
     "prettier:check": "npx prettier --check tests/**/*.ts",
     "lint:check": "npx eslint tests/**/*.ts",
@@ -59,6 +52,7 @@
     "dotenv": "16.0.3",
     "eslint": "8.53.0",
     "eslint-plugin-only-warn": "1.1.0",
+    "eslint-plugin-prettier": "5.1.3",
     "lodash": "^4.17.21",
     "prettier": "3.1.0",
     "typescript": "5.2.2"
