CI: added conditional for Ari Slack workflow

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -102,6 +102,7 @@ jobs:
 
   Ari-Slack-Notification:
     needs: [RegressionTesting]
+    if: always()
     runs-on: ubuntu-latest
     steps:
     - name: 🔔Slack Notification of Done
