added an example suite using setup config test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 			"@data/*": ["./tests/data/*"],
 			"@type/*": ["./tests/interfaces/*"],
 			"@api/*": ["./tests/apis/*"],
-			"@TestBase": ["./tests/pages/TestBase.ts"]
+			"@TestBase": ["./tests/pages/TestBase.ts"],
+			"@playwrightConfig": ["./playwright.config.ts"]
 		}
 	},
 	"exclude": ["node_modules"]
