--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "regression:edge": "npx playwright test -c playwright.edge.config.ts --project=edge",
     "regression:iphone": "npx playwright test -c playwright.iphone.config.ts --project=iphone",
     "regression:ci": "npx playwright test --workers=4",
+    "regression:super:setup": "npx playwright test --project=super-precondition-example --workers=1",
     "show:report:chrome": "npx playwright show-report test-html-report/chrome",
     "show:report:firefox": "npx playwright show-report test-html-report/firefox",
     "show:report:edge": "npx playwright show-report test-html-report/edge",
