--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,12 +1,13 @@
 {
 	"recommendations": [
 		//! Themes:
-		"vscode-icons-team.vscode-icons",
+		"miguelsolorio.fluent-icons",
 		"PKief.material-icon-theme",
 		"EliverLara.andromeda",
 		"johnpapa.winteriscoming",
 		"RobbOwen.synthwave-vscode",
 		"dracula-theme.theme-dracula",
+		"zhuangtongfa.material-theme",
 		//! Helper:
 		"leizongmin.node-module-intellisense",
 		"christian-kohler.npm-intellisense",
@@ -36,8 +37,9 @@
 		"ms-vscode.vscode-typescript-next",
 		"xabikos.JavaScriptSnippets",
 		//! Project main Framework Extensions:
-		"Shelex.vscode-cy-helper",
-		"JosefBiehler.cypress-fixture-intellisense",
-		"ryansong-cy-snippets.cy-snippets"
+		"ms-playwright.playwright",
+		"ryanrosello-og.playwright-vscode-trace-viewer",
+		"nitayneeman.playwright-snippets",
+		"mskelton.playwright-test-snippets"
 	]
 }
