--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
 	"arrowParens": "avoid",
 	"trailingComma": "es5",
 	"bracketSameLine": true,
-	"proseWrap": "always",
+	"proseWrap": "preserve",
 	"printWidth": 150,
 	"parser": "typescript"
 }
