--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"moduleResolution": "Node",
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
+		"strict": true,
 		"types": ["node"],
 		"baseUrl": ".",
 		"paths": {
